--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "python-nostr"]
-	path = python-nostr
+[submodule "pythonostr"]
+	path = pythonostr
 	url = https://github.com/jeffthibault/python-nostr
